--- a/style.css
+++ b/style.css
@@ -100,7 +100,54 @@ body{
     margin-right: 550px;
 }
 
+.orient-day > h3{
+    margin-bottom: 20px;
+}
 
+.orient-day > .See{
+    color: white;
+    background-color: #EC4067;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 5px;
+}
+
+.board > h3{
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-bottom: 30px;
+}
+
+.board > p{
+    margin-left: 100px;
+}
+
+.Read{
+    color: white;
+    background-color: #EC4067;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 5px;
+
+}
+
+#sectboard > .board{
+    display: flex;
+    justify-content: space-between;
+}
+
+.board-img{
+    margin-right: 550px;
+    top: -10px;
+    bottom: -50px;
+}
 
 
 
