--- a/style.css
+++ b/style.css
@@ -144,11 +144,29 @@ body{
 }
 
 .board-img{
-    margin-right: 550px;
+    margin-right: 600px;
+    margin-top: 50px;
     top: -10px;
     bottom: -50px;
 }
 
+#sectgrad > .Grad{
+    display: flex;
+    justify-content: space-between;
+}
 
+.party img{
+    margin-top: 30px;
+    margin-left: 100px;
+}
+
+.Grad-party{
+    margin-right: 570px;
+}
+
+.Grad-party > h3{
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
 
 
