--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ body{
     color: white;
     background-color: #EC4067;
     margin-top: 30px;
-    margin-left: 100px;
+    margin-left: 5px;
     padding-left: 12px;
     padding-right: 12px;
     padding-top: 3px;
@@ -334,8 +334,25 @@ body{
     margin-left: 100px;
 }
 
+.Enroll{
+    margin-left: 10px;
+}
+
 #sectenroll > .enroll > p{
+    margin-top: 20px;
     margin-left: 100px;
+}
+
+
+#sectfooter > .footer{
+    text-align: center;
+    background-color: lightgray;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 50px;
+    margin-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 
