--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 }
 
 body{
+    font-family: <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,500;1,500&display=swap" rel="stylesheet">;
     margin: 0;
     padding: 0;
 }
@@ -85,6 +88,7 @@ body{
 .m-school > .nurture-img{
     margin-right: 60px;
     margin-top: 20px;
+}
 
 #sectstories > h3{
     background-color: lightgrey;
@@ -337,8 +341,13 @@ body{
     margin-left: 100px;
 }
 
-.Enroll{
+.Enroll {
     margin-left: 10px;
+}
+
+.enroll > p > a{
+    text-decoration: none;
+    color: #EC4067;
 }
 
 #sectenroll > .enroll > p{
