--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ body{
     margin-right: 30px;
     color: white;
     background-color: #EC4067;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
     padding-top: 3px;
     padding-bottom: 3px;
     border-radius: 3px;
@@ -61,11 +61,13 @@ body{
 }
 
 #sectmoringa > .m-school > .tech > h2{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 #sectmoringa > .m-school > .tech > .Enroll{
     margin-top: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 #sectmoringa > .m-school > .tech > .Explore{
@@ -73,10 +75,10 @@ body{
     background-color: white;
     border-color: #EC4067;
     border-style: rectangle;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border-radius: 3px;
 }
 
@@ -103,10 +105,12 @@ body{
     margin-left: 100px;
     margin-bottom: 20px;
     font-size: 20px;
+    color: rgb(120,120,120);
+    font-weight: 700;
  }
 
  #memory > span{
-     font-size: small;
+     font-size: xx-small;
  }
 
 .orient-day{
@@ -214,6 +218,8 @@ body{
 }
 
 #sectment > h2{
+    color: rgb(120,120,120);
+    font-weight: 900;
     margin-top: 70px;
     margin-left: 90px;
     margin-bottom: 30px;
@@ -244,7 +250,7 @@ body{
 }
 
 .Byron{
-    margin-left: 80px;
+    margin-left: 60px;
 }
 
 .Byron img{
@@ -272,10 +278,11 @@ body{
 }
 
 .Raphael{
-    margin-right: 80px;
+    margin-right: 100px;
 }
 .Raphael img{
     margin-bottom: 10px;
+    margin-left: 30px;
 }
 
 .Raphael > h5{
@@ -298,11 +305,12 @@ body{
 }
 
 .Karimi{
-    margin-right: 300px;
+    margin-right: 55px;
 }
 
 .Karimi img{
     margin-bottom: 10px;
+    margin-right: 50px;
 }
 
 .Karimi > h5{
